tests/neg-custom-args/captures/dcs-tvar.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/dcs-tvar.scala:5:2 ---------------------------------------
5 |  () => runOps(xs) // error
  |  ^^^^^^^^^^^^^^^^
  |  Found:    () ->{any} Unit
  |  Required: () -> Unit
  |
  |  Note that capability `any` cannot flow into capture set {}.
  |
  |  where:    any is a root capability in the bound of type T
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/dcs-tvar.scala:8:2 ---------------------------------------
8 |  () => runOps(xs) // error
  |  ^^^^^^^^^^^^^^^^
  |  Found:    () ->{any} Unit
  |  Required: () -> Unit
  |
  |  Note that capability `any` cannot flow into capture set {}.
  |
  |  where:    any is a root capability in the bound of type U
  |
  | longer explanation available when compiling with `-explain`
